little fix css max-width and flex-wrap

--- a/src/app/(protected)/userMovie/_components/MyMoviesPage.module.scss
+++ b/src/app/(protected)/userMovie/_components/MyMoviesPage.module.scss
@@ -18,6 +18,7 @@
   display: flex;
   gap: 1rem;
   margin-bottom: 1.5rem;
+  flex-wrap: wrap;
 }
 
 .tabButton {
